--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "glob": "^10.3.12",
     "yaml": "^2.4.2"
   }
