--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,7 @@ jobs:
           grep -q "veribiota import" docs/cli.md
 
       - name: Prepare signing material
+        if: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
         env:
           VERIBIOTA_SIG_KEY: ${{ secrets.VERIBIOTA_SIG_KEY }}
           VERIBIOTA_JWKS_JSON: ${{ secrets.VERIBIOTA_JWKS_JSON }}
@@ -126,15 +127,19 @@ jobs:
           } >> "$GITHUB_ENV"
 
       - name: Emit artifacts (signed-soft)
+        if: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
         run: make sign-soft
 
       - name: Determinism (clone artifacts)
+        if: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
         run: cp -r build/artifacts build/artifacts.first
 
       - name: Determinism (re-emit)
+        if: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
         run: make sign-soft
 
       - name: Determinism (diff)
+        if: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
         run: |
           diff -u <(jq -S 'del(.signature.issuedAt, .signature.jws)' build/artifacts.first/checks/sir-demo.json) \
                   <(jq -S 'del(.signature.issuedAt, .signature.jws)' build/artifacts/checks/sir-demo.json)
@@ -142,6 +147,7 @@ jobs:
                   <(jq -S 'del(.signature.issuedAt, .signature.jws)' build/artifacts/certificates/sir-demo.json)
 
       - name: Import sample model (separate out dir)
+        if: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
         run: |
           ./veribiota import --in Biosim/Examples/Model/sir.model.json \
             --emit-all --out build/imported \
@@ -150,6 +156,7 @@ jobs:
             --sign-kid "$VERIBIOTA_SIG_KID"
 
       - name: Canonicalize & validate schemas
+        if: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
         run: |
           ./veribiota --canon build/artifacts/checks/sir-demo.json \
             --out build/artifacts/checks/sir-demo.json
@@ -158,6 +165,7 @@ jobs:
           node scripts/schemaValidate.mjs
 
       - name: Tamper harness
+        if: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
         run: |
           set -euo pipefail
           bash tests/scripts/tamper.sh build/artifacts/checks/sir-demo.json
@@ -183,6 +191,7 @@ jobs:
           fi
 
       - name: CRLF canonicalization
+        if: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
         run: |
           set -euo pipefail
           awk 'sub("$","\r")' build/artifacts/checks/sir-demo.json > build/artifacts/checks/sir-demo.crlf.json
@@ -190,11 +199,12 @@ jobs:
           diff -u build/artifacts/checks/sir-demo.json build/artifacts/checks/sir-demo.canon.json
 
       - name: SHA capture
+        if: ${{ (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository) && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
         run: |
           (sha256sum build/artifacts/models/*.json build/artifacts/certificates/*.json build/artifacts/checks/*.json) || (shasum -a 256 build/artifacts/models/*.json build/artifacts/certificates/*.json build/artifacts/checks/*.json)
 
       - name: Tarball artifacts
-        if: github.ref == 'refs/heads/main' && matrix.os == 'ubuntu-latest'
+        if: github.ref == 'refs/heads/main' && matrix.os == 'ubuntu-latest' && secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON
         run: |
           tar -C build -czf artifacts.tgz artifacts
 
