--- a/engine/biosim-checks/Cargo.toml
+++ b/engine/biosim-checks/Cargo.toml
@@ -12,3 +12,7 @@ anyhow = "1"
 once_cell = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+
+[[bin]]
+name = "biosim-eval"
+path = "src/bin/eval.rs"
