--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,9 @@ permissions:
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
+    env:
+      VERIBIOTA_SIG_KEY: ${{ secrets.VERIBIOTA_SIG_KEY }}
+      VERIBIOTA_JWKS_JSON: ${{ secrets.VERIBIOTA_JWKS_JSON }}
     steps:
       - uses: actions/checkout@v4
 
@@ -59,10 +62,7 @@ jobs:
         run: lake build
 
       - name: Prepare signing material
-        if: ${{ secrets.VERIBIOTA_SIG_KEY && secrets.VERIBIOTA_JWKS_JSON }}
-        env:
-          VERIBIOTA_SIG_KEY: ${{ secrets.VERIBIOTA_SIG_KEY }}
-          VERIBIOTA_JWKS_JSON: ${{ secrets.VERIBIOTA_JWKS_JSON }}
+        if: env.VERIBIOTA_SIG_KEY != '' && env.VERIBIOTA_JWKS_JSON != ''
         run: |
           set -euo pipefail
           mkdir -p security
