Making veribiota less painful to use

--- a/examples/veribiota-example-pipeline/.github/workflows/veribiota_tier0.yml
+++ b/examples/veribiota-example-pipeline/.github/workflows/veribiota_tier0.yml
@@ -24,6 +24,7 @@ jobs:
           mkdir -p ci_signatures
           veribiota check alignment global_affine_v1 ci_inputs/global_affine_v1.json --snapshot-out ci_signatures/global_affine_v1.sig.json
           veribiota check prime prime_edit_plan_v1 ci_inputs/prime_edit_plan_v1.json --snapshot-out ci_signatures/prime_edit_plan_v1.sig.json
+          veribiota check vcf vcf_normalization_v1 ci_inputs/vcf_normalization_v1.json --snapshot-out ci_signatures/vcf_normalization_v1.sig.json
 
       - name: Validate snapshot signatures
         run: |
