--- a/.github/workflows/tier0_snapshots.yml
+++ b/.github/workflows/tier0_snapshots.yml
@@ -36,6 +36,8 @@ jobs:
           ./veribiota check edit edit_script_normal_form_v1 Tests/profiles/edit_script_normal_form_v1/pass_simple_normal.json --snapshot-out ci_signatures/edit_script_normal_form_v1.sig.json --compact
           ./veribiota check prime prime_edit_plan_v1 Tests/profiles/prime_edit_plan_v1/pass_simple.json --snapshot-out ci_signatures/prime_edit_plan_v1.sig.json --compact
           ./veribiota check hmm pair_hmm_bridge_v1 Tests/profiles/pair_hmm_bridge_v1/pass_simple.json --snapshot-out ci_signatures/pair_hmm_bridge_v1.sig.json --compact
+          ./veribiota check vcf vcf_normalization_v1 Tests/profiles/vcf_normalization_v1/ok_minimal.json --snapshot-out ci_signatures/vcf_normalization_minimal.sig.json --compact
+          ./veribiota check vcf vcf_normalization_v1 Tests/profiles/vcf_normalization_v1/ok_complex.json --snapshot-out ci_signatures/vcf_normalization_complex.sig.json --compact
 
       - name: Validate snapshot signatures
         run: |
