--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ venv/
 *.tmp
 .DS_Store
 site/
+Tests/tmp/
+*.egg-info/
 
 # Generated Lean suites (EditDAG DAGs) – not committed
 **/Biosim/VeriBiota/*/*.lean
