--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,4 +75,5 @@ nav:
   - CLI: cli.md
   - QA & Compliance:
       - QA Checklist: qa_checklist.md
+      - Code Scanning (CodeQL): code_scanning.md
   - Roadmap: roadmap.md
